2006-01-19  Konstantin Triger <kostat@mainsoft.com>

	* HttpApplication.jvm.cs: merge HttpApplication.cs changes.

2006-01-17  Chris Toshok  <toshok@ximian.com>

	* CapabilitiesLoader.cs (Init): use WebConfigurationManager in the
	CONFIGURATION_2_0 case.

	* HttpRuntime.cs (MachineConfigurationDirectory): same.

2006-01-16  Chris Toshok  <toshok@ximian.com>

	* HttpApplicationFactory.cs: call WebConfigurationManager.Init in
	the CONFIGURATION_2_0 case.

2006-01-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWriter.cs: made Write (char) less memory hungry. Thanks to Mike
	Glenn for pointing this out.

2006-01-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: fix condition for ContextAvailable.

2006-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpResponse.cs: removed TARGET_JVM block from End
	* GetJavaTextReader: Merged TARGET_JVM block from LoadFile
	to GetJavaTextReader

2006-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: removed TARGET_JVM block from MapPath

2006-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpRequest.cs: little fix in MapPath(), virtualPath.Replace
	return value wasnt stored.

2006-01-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponse.cs: typo in comment.

	* HttpApplicationFactory.cs:
	* HttpApplication.cs: don't discard the application used for running the
	Application_Start event to allow for Redirect/Transfer to be used. Fail
	to get the request/response from the application object as MS does (it
	can still be retrieved through HttpContext.Current.blah). Fixes
	bug #77162.

2006-01-09  Vladimir Krasnov <vladimirk@mainsoft.com>

	* CapabilitiesLoader.cs: Merged TARGET_JVM parts in LoadFile
	from /main/9
	* HttpException.cs: Merged TARGET_JVM parts in GetHtmlizedErrorMessage
	from /main/13
	* HttpRequest.cs: Merged TARGET_JVM parts in MapPath from /main/29
	* HttpResponse.cs: Merged TARGET_JVM parts in End() from /main/30